# opengl_study

./: CMakeLists.txt
include/: shader_s.h
start/: CMakeLists.txt
start/camera/: CMakeLists.txt  camera.cpp
start/coordinate_system/: CMakeLists.txt  coordinate_system.cpp
start/create_triangle/: CMakeLists.txt
start/create_triangle_index/: CMakeLists.txt  create_triangle_index.cpp
start/create_window/: CMakeLists.txt
start/shader/: CMakeLists.txt  shader.cpp
start/shader/resources/: triangle.vert
start/texture/: CMakeLists.txt  texture.cpp
start/texture/resources/: texture.frag
start/transform/: CMakeLists.txt  transform.cpp
third_include/glad/: glad.h
third_lib/: glfw3.lib
third_src/: glad.c
