cmake_minimum_required(VERSION 3.16)

project(start LANGUAGES CXX)

add_subdirectory(create_window)
add_subdirectory(create_triangle)
add_subdirectory(create_triangle_index)
add_subdirectory(shader)
add_subdirectory(texture)
add_subdirectory(transform)
add_subdirectory(coordinate_system)
add_subdirectory(camera)